@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.7 ===
+* Implemented Dry/Wet balance knob.
 * Updated build scripts and dependencies.
 
 === 1.0.6 ===
